Add publish-snapshot and IMDG-Snapshot actions (#283)
* build master branch agains HZ snapshot

* create snaphot deploy action and re-arrange all actions