@@ -463,38 +463,6 @@
       </build>
     </profile>
     <profile>
-      <id>master</id>
-      <properties>
-        <hazelcast.version>4.2-SNAPSHOT</hazelcast.version>
-      </properties>
-      <dependencies>
-        <dependency>
-          <groupId>com.hazelcast</groupId>
-          <artifactId>hazelcast</artifactId>
-          <version>${hazelcast.version}</version>
-        </dependency>
-      </dependencies>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>${maven.surefire.plugin.version}</version>
-            <configuration combine.self="override">
-              <parallel>none</parallel>
-              <redirectTestOutputToFile>true</redirectTestOutputToFile>
-              <argLine>-Xms128m -Xmx1G -XX:MaxPermSize=128M
-                -Dhazelcast.phone.home.enabled=false
-                -Dhazelcast.mancenter.enabled=false
-                -Dhazelcast.logging.type=none
-                -Dhazelcast.test.use.network=true
-              </argLine>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-    <profile>
       <id>release-sign-artifacts</id>
       <activation>
         <property>
